--- a/Cydin/Content/Site.css
+++ b/Cydin/Content/Site.css
@@ -16,7 +16,7 @@ body
 a:link
 {
     color: #034af3;
-    text-decoration: underline;
+    text-decoration: none;
 }
 a:visited
 {
@@ -25,7 +25,7 @@ a:visited
 a:hover
 {
     color: #1d60ff;
-    text-decoration: none;
+    text-decoration: underline;
 }
 a:active
 {
@@ -35,6 +35,11 @@ a:active
 p, ul
 {
     line-height: 1.6em;
+}
+
+.command a:link
+{
+    text-decoration: underline;
 }
 
 /* HEADINGS   
