Keep an history of downloads Downloads are now stored per-day. Releases are never deleted, so there will be download info for old releases.

--- a/Cydin/Content/Site.css
+++ b/Cydin/Content/Site.css
@@ -15,12 +15,12 @@ body
 
 a:link
 {
-    color: #034af3;
+    color: #4E6D9F;
     text-decoration: none;
 }
 a:visited
 {
-    color: #034af3;
+    color: #4E6D9F;
 }
 a:hover
 {
