--- a/Cydin/Content/Site.css
+++ b/Cydin/Content/Site.css
@@ -231,8 +231,8 @@ table th
 {
   padding: 6px 5px;
   text-align: left;
-  background-color: #e8eef4; 
-  border: solid 1px #e8eef4;   
+  background-color: #f2f2f2; 
+  border: solid 1px lightgrey;   
 }
 
 /* MISC  
@@ -310,7 +310,7 @@ div#title
 
 .tag-source-table-body
 {
-	border: solid 1px grey
+	border: solid 1px lightgrey
 }
 .tag-source-table-body-Ready
 {
@@ -318,24 +318,24 @@ div#title
 .tag-source-table-body td
 {
 	padding: 5px;
-	background-color: #e7e8ff
+	background-color: #f5f5f5
 }
 .tag-source-table-name
 {
 	color:black;
-	background-color: #d2d4ff;
+	background-color: #f2f2f2;
 	font-weight: bold;
 	padding: 5px;
-	border-top: solid 1px grey;
-	border-left: solid 1px grey;
-	border-right: solid 1px grey;
+	border-top: solid 1px lightgrey;
+	border-left: solid 1px lightgrey;
+	border-right: solid 1px lightgrey;
 }
 .tag-source-table-status
 {
 	color:black;
 	padding: 5px;
-	border-top: solid 1px grey;
-	border-right: solid 1px grey;
+	border-top: solid 1px lightgrey;
+	border-right: solid 1px lightgrey;
 	background-color: #ebde6b;
 }
 
@@ -346,7 +346,7 @@ div#title
 
 .tag-source-table-status-Ready
 {
-	background-color: #d2d4ff;
+	background-color: #eeeeee;
 }
 
 /* Styles for validation helpers
