--- a/Cydin/Content/jquery-ui-1.8.2.custom.css
+++ b/Cydin/Content/jquery-ui-1.8.2.custom.css
@@ -66,12 +66,12 @@
 
 /* Interaction states
 ----------------------------------*/
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 1px solid lightgrey; background: #eeeeee url(images/ui-bg_glass_85_ffffff_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #2e6e9e; }
-.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #2e6e9e; text-decoration: none; }
-.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #lightgrey; background: #ffffff; font-weight: normal; color: #1d5987; }
-.ui-state-hover a, .ui-state-hover a:hover { color: #1d5987; text-decoration: none; }
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #bfd1e8; background: #f5f8f9 url(images/ui-bg_inset-hard_100_f5f8f9_1x100.png) 50% 50% repeat-x; font-weight: bold; color: #121754; }
-.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #121754; text-decoration: none; }
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 1px solid lightgrey; background: #eeeeee; font-weight: normal; color: #696969; }
+.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #696969; text-decoration: none; }
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #lightgrey; background: #ffffff; font-weight: normal; color: #696969; }
+.ui-state-hover a, .ui-state-hover a:hover { color: #696969; text-decoration: none; }
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { background: lightgrey; font-weight: normal; color: #696969; }
+.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #696969; text-decoration: none; }
 .ui-widget :active { outline: none; }
 
 /* Interaction Cues
@@ -401,7 +401,6 @@
  *
  * http://docs.jquery.com/UI/Button#theming
  */
-.ui-button a:hover { background: blue }
 .ui-button { display: inline-block; position: relative; padding: 0; margin-right: .1em; text-decoration: none !important; cursor: pointer; text-align: center; zoom: 1; overflow: visible; } /* the overflow property removes extra width in IE */
 .ui-button-icon-only { width: 2.2em; } /* to make room for the icon, a width needs to be set here */
 button.ui-button-icon-only { width: 2.4em; } /* button elements seem to need a little more width */
@@ -409,8 +408,8 @@ button.ui-button-icon-only { width: 2.4em; } /* button elements seem to need a l
 button.ui-button-icons-only { width: 3.7em; } 
 
 /*button text element */
-.ui-button .ui-button-text { display: block; line-height: 1.4; }
-.ui-button-text-only .ui-button-text { padding: .1em .5em; color:#696969; }
+.ui-button .ui-button-text { display: block; line-height: 1.4; color:#696969;}
+.ui-button-text-only .ui-button-text { padding: .1em .5em; }
 .ui-button-icon-only .ui-button-text, .ui-button-icons-only .ui-button-text { padding: .3em; text-indent: -9999999px; }
 .ui-button-text-icon-primary .ui-button-text, .ui-button-text-icons .ui-button-text { padding: .2em 1em .2em 2.1em; }
 .ui-button-text-icon-secondary .ui-button-text, .ui-button-text-icons .ui-button-text { padding: .2em 2.1em .2em 1em; }
